src/index.css
:root {
  font:
    400 12px / 1.5 "Sora",
    sans-serif;
}
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html,
body {
  background-color: #fff;
}

/* --------- App --------- */
.app-container {
  display: grid;
  grid-template-rows: 1fr 80px;
  min-height: 100vh;
}
main {
  padding: 20px;
}

footer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  columns: 3;
}
footer div {
  padding: 20px;
}
.copyright {
  width: 100%;
  text-align: center;
}
.image-container {
  position: relative;
}
.bob-image {
  filter: contrast(2);
  position: absolute;
  bottom: 0;
  right: 0px;
  pointer-events: none;
}

@media only screen and (max-width: 700px) {
  footer {
    display: flex;
    flex-flow: column-reverse;
    margin: 0 auto;
  }
  footer div {
    text-align: center;
    padding-top: 0;
  }
  .bob-image {
    left: 33%;
    width: 120px;
    transform: translateX(-50%);
  }
}

/* --------- Title --------- */
.title-bg {
  width: fit-content;
  --hue-1: 200;
  --hue-2: 260;
  --hue-3: 320;
  --hue-4: 20;
}
.title-bg h1 {
  padding: 20px 0;
  background:
    linear-gradient(
      to bottom right,
      hsl(var(--hue-1), 100%, 65%),
      hsla(var(--hue-1), 80%, 95%, 0)
    ),
    linear-gradient(
      to bottom left,
      hsl(var(--hue-2), 100%, 65%),
      hsla(var(--hue-2), 80%, 95%, 0)
    ),
    linear-gradient(
      to top left,
      hsl(var(--hue-3), 100%, 65%),
      hsla(var(--hue-3), 80%, 95%, 0)
    ),
    linear-gradient(
      to top right,
      hsl(var(--hue-4), 100%, 65%),
      hsla(var(--hue-4), 80%, 95%, 0)
    );
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  -webkit-text-fill-color: transparent;
}

/* --------- SelectedWorks --------- */
.sections-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;
  margin: 0 auto;
}
ul {
  list-style: none;
}
.selected-works-container {
  display: flex;
  flex-flow: column;
}
.subheading {
  font-weight: 600;
  font-size: 18px;
}
.description-box {
  display: grid;
  max-width: 350px;
  grid-template-rows: 0fr;
  transition: grid-template-rows 300ms ease;
}
.description-box.is-open {
  grid-template-rows: 1fr;
}
.description-box > .description-inner {
  overflow: hidden;
}
.what-we-did {
  padding-top: 5px;
  font-style: italic;
}
.title-container {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  gap: 10px;
}
.url {
  color: black;
}
.url:hover {
  color: hotpink;
}
.title-container button {
  color: black;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 20px;
  background: transparent;
  border: none;
  font-size: 20px;
  font-weight: 600;
  transform: skew(0deg);
  transition: transform 300ms ease;
}
.title-container button.is-open {
  transform: skew(-15deg);
}
.lines {
  /* border: 1px solid black; */
  width: 12px;
  height: 12px;
  position: relative;
  transition: transform 300ms ease;
  transform: rotate(0deg);
  transform-origin: 50% 50%;
  cursor: pointer;
}
.lines.is-open {
  transform: rotate(45deg);
}
.line {
  position: absolute;
  border: 1px solid black;
}
.hline {
  top: 4px;
  width: 10px;
  height: 0;
}
.vline {
  left: 4px;
  height: 10px;
  width: 0;
}
.stack-image {
  height: 20px;
  margin: 10px;
  filter: grayscale(1);
}
.tooltip {
  position: relative;
  display: inline-block;
}
.tooltip-bubble {
  position: absolute;
  background: white;
  bottom: 100%;
  left: 0;
  padding: 2px 6px;
  white-space: nowrap;
  opacity: 0;
  visibility: hidden;
  transition: opacity 150ms ease;
  font-size: 9px;
}
.tooltip:hover .tooltip-bubble,
.tooltip:focus-within .tooltip-bubble {
  opacity: 1;
  visibility: visible;
}
.selected-works-video {
  width: 200px;
}

@media only screen and (max-width: 700px) {
  .sections-container {
    grid-template-columns: 1fr;
  }
}

/* ----- About ------ */

.about {
  margin-bottom: 20px;
}

